docs():regenerate api documentation
here add filter to the fetch order rouite and regenerate api documentation
