# SA01-grpc-api-gateway/cmd/api/docs/swagger.json
@@ -19,6 +19,17 @@
                 ],
                 "summary": "Fetch Order",
                 "operationId": "Fetchorder",
+                "parameters": [
+                    {
+                        "description": "Filter Detials",
+                        "name": "filterdetials",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/github_com_fazilnbr_SA01-OrderManagement_SA01-grpc-api-gateway_pkg_domain.Filter"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -117,6 +128,26 @@
         }
     },
     "definitions": {
+        "github_com_fazilnbr_SA01-OrderManagement_SA01-grpc-api-gateway_pkg_domain.Filter": {
+            "type": "object",
+            "properties": {
+                "maxtotal": {
+                    "type": "number"
+                },
+                "mintotal": {
+                    "type": "number"
+                },
+                "sortby": {
+                    "type": "string"
+                },
+                "sortorder": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
         "github_com_fazilnbr_SA01-OrderManagement_SA01-grpc-api-gateway_pkg_domain.Item": {
             "type": "object",
             "properties": {
