# SA01-grpc-api-gateway/pkg/order/routes/fetchOrder.go
@@ -4,6 +4,7 @@ import (
 	"net/http"
 	"strconv"
 
+	"github.com/fazilnbr/SA01-OrderManagement/SA01-grpc-api-gateway/pkg/domain"
 	"github.com/fazilnbr/SA01-OrderManagement/SA01-grpc-api-gateway/pkg/utils/response"
 	"github.com/fazilnbr/SA01-OrderManagement/pb"
 	"github.com/gin-gonic/gin"
@@ -14,12 +15,20 @@ import (
 // @Tags Order
 // @Produce json
 // @Security BearerAuth
+// @Param filterdetials body domain.Filter{} true "Filter Detials"
 // @Success 200 {object} response.Response{}
 // @Failure 422 {object} response.Response{}
 // @Router /order [get]
 func FetchOrder(ctx *gin.Context, c pb.OrderServiceClient) {
 
-	id,_ := strconv.Atoi(ctx.Writer.Header().Get("userId"))
+	id, _ := strconv.Atoi(ctx.Writer.Header().Get("userId"))
+
+	body := domain.Filter{}
+
+	if err := ctx.BindJSON(&body); err != nil {
+		ctx.AbortWithError(http.StatusBadRequest, err)
+		return
+	}
 
 	res, err := c.FetchOrder(ctx, &pb.FetchOrderRequest{
 		UserId: int64(id),
